--- a/configure.in
+++ b/configure.in
@@ -31,7 +31,7 @@
 
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.59)
-AC_INIT([detox],[1.2.0],[purgedhalo at users.sourceforge.net])
+AC_INIT([detox],[1.2.1],[detox.dharple at gmail.com])
 AC_CONFIG_SRCDIR([detox.c])
 AC_CONFIG_HEADER([config.h])
 
