--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,10 @@
 SUBDIRS = src
 dist_doc_DATA = README.md
 
+dist_man1_MANS = man/*.1
+dist_man5_MANS = man/*.5
+
+dist_sysconf_DATA = etc/detoxrc
+
+dist_pkgdata_DATA = table/*
+
