Make detoxrc install not clobber the main detoxrc [#1]

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,9 @@ dist_doc_DATA = README.md
 dist_man1_MANS = man/*.1
 dist_man5_MANS = man/*.5
 
-dist_sysconf_DATA = etc/detoxrc
+dist_sysconf_DATA = etc/detoxrc.sample
 
 dist_pkgdata_DATA = table/*
 
+install-data-hook:
+	cp -an $(DESTDIR)$(sysconfdir)/detoxrc.sample $(DESTDIR)$(sysconfdir)/detoxrc
