Remove hackish inline-detox compilation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ AM_YFLAGS = -d
 
 AM_CPPFLAGS = -DDATADIR=\"$(datadir)\" -DSYSCONFDIR=\"$(sysconfdir)\"
 
-bin_PROGRAMS = detox
+bin_PROGRAMS = detox inline-detox
 detox_SOURCES = detox.c file.c clean_string.c table.c parse_table.c config_file_yacc.y config_file_lex.l config_file_spoof.c config_file_dump.c parse_options_getopt.c parse_options_generic.c
+inline_detox_SOURCES = $(detox_SOURCES)
 
