--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,5 @@
-BUILT_SOURCES = config_file.h
+AM_CFLAGS = -g -O2 -Wall -DYY_NO_INPUT -DYY_NO_UNPUT -DDATADIR=\"$(datadir)\" -DSYSCONFDIR=\"$(sysconfdir)\"
 AM_YFLAGS = -d
-
-AM_CPPFLAGS = -DDATADIR=\"$(datadir)\" -DSYSCONFDIR=\"$(sysconfdir)\"
 
 bin_PROGRAMS = detox inline-detox
 detox_SOURCES = detox.c file.c clean_string.c table.c parse_table.c config_file_yacc.y config_file_lex.l config_file_spoof.c config_file_dump.c parse_options.c
