--- a/table/safe.tbl.sample
+++ b/table/safe.tbl.sample
@@ -16,12 +16,47 @@
 start
 
 #
+# Control characters to translate to _
+#
+# Descriptions pulled from ascii(7)
+#
+
+0x01		_	#  SOH (start of heading)
+0x02		_	#  STX (start of text)
+0x03		_	#  ETX (end of text)
+0x04		_	#  EOT (end of transmission)
+0x05		_	#  ENQ (enquiry)
+0x06		_	#  ACK (acknowledge)
+0x07		_	#  BEL '\a' (bell)
+0x08		_	#  BS  '\b' (backspace)
+0x09		_	#  HT  '\t' (horizontal tab)
+0x0A		_	#  LF  '\n' (new line)
+0x0B		_	#  VT  '\v' (vertical tab)
+0x0C		_	#  FF  '\f' (form feed)
+0x0D		_	#  CR  '\r' (carriage ret)
+0x0E		_	#  SO  (shift out)
+0x0F		_	#  SI  (shift in)
+0x10		_	#  DLE (data link escape)
+0x11		_	#  DC1 (device control 1)
+0x12		_	#  DC2 (device control 2)
+0x13		_	#  DC3 (device control 3)
+0x14		_	#  DC4 (device control 4)
+0x15		_	#  NAK (negative ack.)
+0x16		_	#  SYN (synchronous idle)
+0x17		_	#  ETB (end of trans. blk)
+0x18		_	#  CAN (cancel)
+0x19		_	#  EM  (end of medium)
+0x1A		_	#  SUB (substitute)
+0x1B		_	#  ESC (escape)
+0x1C		_	#  FS  (file separator)
+0x1D		_	#  GS  (group separator)
+0x1E		_	#  RS  (record separator)
+0x1F		_	#  US  (unit separator)
+
+#
 # Chars to translate to _
 #
 
-0x09		_	# tab
-0x0A		_	# new line
-0x0D		_	# carriage return
 0x20		_	# space
 0x21		_	# !
 0x22		_	# "
