Update safe filters to translate DEL into _ (#29)

--- a/table/safe.tbl.sample
+++ b/table/safe.tbl.sample
@@ -30,12 +30,12 @@ start
 0x07		_	#  BEL '\a' (bell)
 0x08		_	#  BS  '\b' (backspace)
 0x09		_	#  HT  '\t' (horizontal tab)
-0x0A		_	#  LF  '\n' (new line)
-0x0B		_	#  VT  '\v' (vertical tab)
-0x0C		_	#  FF  '\f' (form feed)
-0x0D		_	#  CR  '\r' (carriage ret)
-0x0E		_	#  SO  (shift out)
-0x0F		_	#  SI  (shift in)
+0x0a		_	#  LF  '\n' (new line)
+0x0b		_	#  VT  '\v' (vertical tab)
+0x0c		_	#  FF  '\f' (form feed)
+0x0d		_	#  CR  '\r' (carriage ret)
+0x0e		_	#  SO  (shift out)
+0x0f		_	#  SI  (shift in)
 0x10		_	#  DLE (data link escape)
 0x11		_	#  DC1 (device control 1)
 0x12		_	#  DC2 (device control 2)
@@ -46,12 +46,14 @@ start
 0x17		_	#  ETB (end of trans. blk)
 0x18		_	#  CAN (cancel)
 0x19		_	#  EM  (end of medium)
-0x1A		_	#  SUB (substitute)
-0x1B		_	#  ESC (escape)
-0x1C		_	#  FS  (file separator)
-0x1D		_	#  GS  (group separator)
-0x1E		_	#  RS  (record separator)
-0x1F		_	#  US  (unit separator)
+0x1a		_	#  SUB (substitute)
+0x1b		_	#  ESC (escape)
+0x1c		_	#  FS  (file separator)
+0x1d		_	#  GS  (group separator)
+0x1e		_	#  RS  (record separator)
+0x1f		_	#  US  (unit separator)
+
+0x7f		_	#  DEL
 
 #
 # Chars to translate to _
