--- a/table/unicode.tbl.sample
+++ b/table/unicode.tbl.sample
@@ -32,13 +32,22 @@ start
 # characters removed.
 #
 
+0x0020		" "	# SPACE
+0x0021		!	# EXCLAMATION POINT
+0x0022		'"'	# DOUBLE QUOTE
 0x0023		#	# NUMBER SIGN
+0x0024		$	# DOLLAR SIGN
 0x0025		%	# PERCENT SIGN
-0x0026		_and_	# AMPERSAND
+0x0026		&	# AMPERSAND
+0x0027		"'"	# SINGLE QUOTE
+0x0028		(	# PARENTHESIS OPEN
+0x0029		)	# PARENTHESIS CLOSE
+0x002A		*	# ASTERISK
 0x002B		+	# PLUS SIGN
 0x002C		,	# COMMA
 0x002D		-	# HYPHEN-MINUS
 0x002E		.	# FULL STOP
+0x002F		/	# FORWARD SLASH
 
 0x0030		0	# DIGIT ZERO
 0x0031		1	# DIGIT ONE
@@ -50,8 +59,14 @@ start
 0x0037		7	# DIGIT SEVEN
 0x0038		8	# DIGIT EIGHT
 0x0039		9	# DIGIT NINE
+0x003A		:	# COLON
+0x003B		;	# SEMI-COLON
+0x003C		<	# LESS THAN
 0x003D		=	# EQUALS SIGN
+0x003E		>	# GREATER THAN
+0x003F		?	# QUESTION MARK
 
+0x0040		@	# COMMERCIAL AT
 0x0041		A	# LATIN CAPITAL LETTER A
 0x0042		B	# LATIN CAPITAL LETTER B
 0x0043		C	# LATIN CAPITAL LETTER C
@@ -79,8 +94,13 @@ start
 0x0058		X	# LATIN CAPITAL LETTER X
 0x0059		Y	# LATIN CAPITAL LETTER Y
 0x005A		Z	# LATIN CAPITAL LETTER Z
+0x005B		[	# SQUARE BRACKET OPEN
+0x005C		\	# BACK SLASH
+0x005D		]	# SQUARE BRACKET CLOSE
 0x005E		^	# CIRCUMFLEX ACCENT
+0x005F		_	# UNDERSCORE
 
+0x0060		`	# BACKTICK
 0x0061		a	# LATIN SMALL LETTER A
 0x0062		b	# LATIN SMALL LETTER B
 0x0063		c	# LATIN SMALL LETTER C
@@ -108,6 +128,9 @@ start
 0x0078		x	# LATIN SMALL LETTER X
 0x0079		y	# LATIN SMALL LETTER Y
 0x007A		z	# LATIN SMALL LETTER Z
+0x007B		{	# CURVED BRACKET OPEN
+0x007C		|	# PIPE
+0x007D		}	# CURVED BRACKET CLOSE
 0x007E		~	# TILDE
 
 #
