--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,13 +1,17 @@
+if MANDOC_INSTALLED
+
 all-local: detox.1.pdf inline-detox.1.pdf detoxrc.5.pdf detox.tbl.5.pdf
 
 detox.1.pdf: detox.1
-	man -l -Tps detox.1 | ps2pdf - detox.1.pdf
+	$(MANDOC) -T pdf detox.1 > detox.1.pdf
 
 inline-detox.1.pdf: inline-detox.1
-	man -l -Tps inline-detox.1 | ps2pdf - inline-detox.1.pdf
+	$(MANDOC) -T pdf inline-detox.1 > inline-detox.1.pdf
 
 detoxrc.5.pdf: detoxrc.5
-	man -l -Tps detoxrc.5 | ps2pdf - detoxrc.5.pdf
+	$(MANDOC) -T pdf detoxrc.5 > detoxrc.5.pdf
 
 detox.tbl.5.pdf: detox.tbl.5
-	man -l -Tps detox.tbl.5 | ps2pdf - detox.tbl.5.pdf
+	$(MANDOC) -T pdf detox.tbl.5 > detox.tbl.5.pdf
+
+endif
