Add table generated from 3rd party sources (#47)

--- a/table/iso8859_1.tbl.sample
+++ b/table/iso8859_1.tbl.sample
@@ -35,20 +35,42 @@ start
 0x9F		Y	# LATIN CAPITAL LETTER Y WITH DIAERESIS
 
 #
-# Latin 1
+# Latin 1 Supplemental
 #
 
-0xA2		_cent_
-0xA3		_pound_
-0xA5		_yen_
-0xA9		_copy_
-0xAE		_reg_
+0xA0		" "	# NO-BREAK SPACE
+0xA1		!	# INVERTED EXCLAMATION MARK
+0xA2		_cent_	# CENT SIGN
+0xA3		_pound_	# POUND SIGN
+0xA4		$	# CURRENCY SIGN
+0xA5		_yen_	# YEN SIGN
+0xA6		|	# BROKEN BAR
+0xA7		SS	# SECTION SIGN
+0xA8		'"'	# DIAERESIS
+0xA9		_copy_	# COPYRIGHT SIGN
+0xAA		a	# FEMININE ORDINAL INDICATOR
+0xAB		<<	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
+0xAC		!	# NOT SIGN
+0xAD		-	# SOFT HYPHEN
+0xAE		_reg_	# REGISTERED SIGN
+0xAF		-	# MACRON
 
-0xB2		2
-0xB3		3
-0xB5		b
-0xB6		_pp_
-0xB9		1
+0xB0		_deg_	# DEGREE SIGN
+0xB1		+-	# PLUS-MINUS SIGN
+0xB2		2	# SUPERSCRIPT TWO
+0xB3		3	# SUPERSCRIPT THREE
+0xB4		"'"	# ACUTE ACCENT
+0xB5		u	# MICRO SIGN
+0xB6		_pp_	# PILCROW SIGN
+0xB7		*	# MIDDLE DOT
+0xB8		,	# CEDILLA
+0xB9		1	# SUPERSCRIPT ONE
+0xBA		o	# MASCULINE ORDINAL INDICATOR
+0xBB		>>	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
+0xBC		1/4	# VULGAR FRACTION ONE QUARTER
+0xBD		1/2	# VULGAR FRACTION ONE HALF
+0xBE		3/4	# VULGAR FRACTION THREE QUARTERS
+0xBF		?	# INVERTED QUESTION MARK
 
 0xC0		A	# LATIN CAPITAL LETTER A WITH GRAVE
 0xC1		A	# LATIN CAPITAL LETTER A WITH ACUTE
@@ -108,6 +130,7 @@ start
 0xF4		o	# LATIN SMALL LETTER O WITH CIRCUMFLEX
 0xF5		o	# LATIN SMALL LETTER O WITH TILDE
 0xF6		o	# LATIN SMALL LETTER O WITH DIAERESIS
+0xF7		/	# DIVISION SIGN
 0xF8		o	# LATIN SMALL LETTER O WITH STROKE
 0xF9		u	# LATIN SMALL LETTER U WITH GRAVE
 0xFA		u	# LATIN SMALL LETTER U WITH ACUTE
