Adjust unidecode and unicode tables (#47)
- Remove commented out entries in Unidecode.
- Remove "?" and "[?]" entries in Unidecode, unless the Unicode description
  contains the word "QUESTION".
- Remove and revamp some of the transliterations in the 0xA0 - 0xBF space.

--- a/table/iso8859_1.tbl.sample
+++ b/table/iso8859_1.tbl.sample
@@ -44,32 +44,24 @@ start
 0xA3		_pound_	# POUND SIGN
 0xA4		$	# CURRENCY SIGN
 0xA5		_yen_	# YEN SIGN
-0xA6		|	# BROKEN BAR
-0xA7		SS	# SECTION SIGN
-0xA8		'"'	# DIAERESIS
+0xA7		_ss_	# SECTION SIGN
 0xA9		_copy_	# COPYRIGHT SIGN
-0xAA		a	# FEMININE ORDINAL INDICATOR
-0xAB		<<	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
-0xAC		!	# NOT SIGN
+0xAA		_a_	# FEMININE ORDINAL INDICATOR
+0xAB		'"'	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
 0xAD		-	# SOFT HYPHEN
 0xAE		_reg_	# REGISTERED SIGN
-0xAF		-	# MACRON
 
 0xB0		_deg_	# DEGREE SIGN
-0xB1		+-	# PLUS-MINUS SIGN
-0xB2		2	# SUPERSCRIPT TWO
-0xB3		3	# SUPERSCRIPT THREE
+0xB2		^2	# SUPERSCRIPT TWO
+0xB3		^3	# SUPERSCRIPT THREE
 0xB4		"'"	# ACUTE ACCENT
 0xB5		u	# MICRO SIGN
 0xB6		_pp_	# PILCROW SIGN
 0xB7		*	# MIDDLE DOT
 0xB8		,	# CEDILLA
-0xB9		1	# SUPERSCRIPT ONE
-0xBA		o	# MASCULINE ORDINAL INDICATOR
-0xBB		>>	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
-0xBC		1/4	# VULGAR FRACTION ONE QUARTER
-0xBD		1/2	# VULGAR FRACTION ONE HALF
-0xBE		3/4	# VULGAR FRACTION THREE QUARTERS
+0xB9		^1	# SUPERSCRIPT ONE
+0xBA		_o_	# MASCULINE ORDINAL INDICATOR
+0xBB		'"'	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
 0xBF		?	# INVERTED QUESTION MARK
 
 0xC0		A	# LATIN CAPITAL LETTER A WITH GRAVE
@@ -130,7 +122,6 @@ start
 0xF4		o	# LATIN SMALL LETTER O WITH CIRCUMFLEX
 0xF5		o	# LATIN SMALL LETTER O WITH TILDE
 0xF6		o	# LATIN SMALL LETTER O WITH DIAERESIS
-0xF7		/	# DIVISION SIGN
 0xF8		o	# LATIN SMALL LETTER O WITH STROKE
 0xF9		u	# LATIN SMALL LETTER U WITH GRAVE
 0xFA		u	# LATIN SMALL LETTER U WITH ACUTE
