--- a/table/unicode.tbl.sample
+++ b/table/unicode.tbl.sample
@@ -154,6 +154,7 @@ start
 
 #
 # Latin 1 Supplemental
+# https://unicode.org/charts/PDF/U0080.pdf
 #
 
 0x00A0		" "	# NO-BREAK SPACE
@@ -162,32 +163,24 @@ start
 0x00A3		_pound_	# POUND SIGN
 0x00A4		$	# CURRENCY SIGN
 0x00A5		_yen_	# YEN SIGN
-0x00A6		|	# BROKEN BAR
-0x00A7		SS	# SECTION SIGN
-0x00A8		'"'	# DIAERESIS
+0x00A7		_ss_	# SECTION SIGN
 0x00A9		_copy_	# COPYRIGHT SIGN
-0x00AA		a	# FEMININE ORDINAL INDICATOR
-0x00AB		<<	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
-0x00AC		!	# NOT SIGN
+0x00AA		_a_	# FEMININE ORDINAL INDICATOR
+0x00AB		'"'	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
 0x00AD		-	# SOFT HYPHEN
 0x00AE		_reg_	# REGISTERED SIGN
-0x00AF		-	# MACRON
 
 0x00B0		_deg_	# DEGREE SIGN
-0x00B1		+-	# PLUS-MINUS SIGN
-0x00B2		2	# SUPERSCRIPT TWO
-0x00B3		3	# SUPERSCRIPT THREE
+0x00B2		^2	# SUPERSCRIPT TWO
+0x00B3		^3	# SUPERSCRIPT THREE
 0x00B4		"'"	# ACUTE ACCENT
 0x00B5		u	# MICRO SIGN
 0x00B6		_pp_	# PILCROW SIGN
 0x00B7		*	# MIDDLE DOT
 0x00B8		,	# CEDILLA
-0x00B9		1	# SUPERSCRIPT ONE
-0x00BA		o	# MASCULINE ORDINAL INDICATOR
-0x00BB		>>	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
-0x00BC		1/4	# VULGAR FRACTION ONE QUARTER
-0x00BD		1/2	# VULGAR FRACTION ONE HALF
-0x00BE		3/4	# VULGAR FRACTION THREE QUARTERS
+0x00B9		^1	# SUPERSCRIPT ONE
+0x00BA		_o_	# MASCULINE ORDINAL INDICATOR
+0x00BB		'"'	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
 0x00BF		?	# INVERTED QUESTION MARK
 
 0x00C0		A	# LATIN CAPITAL LETTER A WITH GRAVE
@@ -248,7 +241,6 @@ start
 0x00F4		o	# LATIN SMALL LETTER O WITH CIRCUMFLEX
 0x00F5		o	# LATIN SMALL LETTER O WITH TILDE
 0x00F6		o	# LATIN SMALL LETTER O WITH DIAERESIS
-0x00F7		/	# DIVISION SIGN
 0x00F8		o	# LATIN SMALL LETTER O WITH STROKE
 0x00F9		u	# LATIN SMALL LETTER U WITH GRAVE
 0x00FA		u	# LATIN SMALL LETTER U WITH ACUTE
