--- a/table/iso8859_1.tbl.sample
+++ b/table/iso8859_1.tbl.sample
@@ -19,117 +19,104 @@ default		_
 start
 
 #
-# CP 1252
+# Latin 1 Supplemental - 0x0080-0x00FF
+#
+# https://unicode.org/charts/PDF/U0080.pdf
 #
 
-0x85		...	# HORIZONTAL ELLIPSIS
-0x88		^	# MODIFIER LETTER CIRCUMFLEX ACCENT
-0x8A		S	# LATIN CAPITAL LETTER S WITH CARON
-0x8C		OE	# LATIN CAPITAL LIGATURE OE
+0x00A0		" "	# NO-BREAK SPACE
+0x00A1		!	# INVERTED EXCLAMATION MARK
+0x00A2		_cent_	# CENT SIGN
+0x00A3		_pound_	# POUND SIGN
+0x00A4		$	# CURRENCY SIGN
+0x00A5		_yen_	# YEN SIGN
+0x00A7		_ss_	# SECTION SIGN
+0x00A8		" "	# DIAERESIS
+0x00A9		_copy_	# COPYRIGHT SIGN
+0x00AA		_a_	# FEMININE ORDINAL INDICATOR
+0x00AB		'"'	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
+0x00AD		-	# SOFT HYPHEN
+0x00AE		_reg_	# REGISTERED SIGN
 
-0x96		-	# EN DASH
-0x97		-	# EM DASH
-0x99		_tm_	# TRADE MARK SIGN
-0x9A		s	# LATIN SMALL LETTER S WITH CARON
-0x9C		oe	# LATIN SMALL LIGATURE OE
-0x9F		Y	# LATIN CAPITAL LETTER Y WITH DIAERESIS
+0x00B0		_deg_	# DEGREE SIGN
+0x00B2		^2	# SUPERSCRIPT TWO
+0x00B3		^3	# SUPERSCRIPT THREE
+0x00B4		"'"	# ACUTE ACCENT
+0x00B5		u	# MICRO SIGN
+0x00B6		_pp_	# PILCROW SIGN
+0x00B7		*	# MIDDLE DOT
+0x00B8		" "	# CEDILLA
+0x00B9		^1	# SUPERSCRIPT ONE
+0x00BA		_o_	# MASCULINE ORDINAL INDICATOR
+0x00BB		'"'	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
+0x00BF		?	# INVERTED QUESTION MARK
 
-#
-# Latin 1 Supplemental
-#
+0x00C0		A	# LATIN CAPITAL LETTER A WITH GRAVE
+0x00C1		A	# LATIN CAPITAL LETTER A WITH ACUTE
+0x00C2		A	# LATIN CAPITAL LETTER A WITH CIRCUMFLEX
+0x00C3		A	# LATIN CAPITAL LETTER A WITH TILDE
+0x00C4		A	# LATIN CAPITAL LETTER A WITH DIAERESIS
+0x00C5		A	# LATIN CAPITAL LETTER A WITH RING ABOVE
+0x00C6		AE	# LATIN CAPITAL LETTER AE
+0x00C7		C	# LATIN CAPITAL LETTER C WITH CEDILLA
+0x00C8		E	# LATIN CAPITAL LETTER E WITH GRAVE
+0x00C9		E	# LATIN CAPITAL LETTER E WITH ACUTE
+0x00CA		E	# LATIN CAPITAL LETTER E WITH CIRCUMFLEX
+0x00CB		E	# LATIN CAPITAL LETTER E WITH DIAERESIS
+0x00CC		I	# LATIN CAPITAL LETTER I WITH GRAVE
+0x00CD		I	# LATIN CAPITAL LETTER I WITH ACUTE
+0x00CE		I	# LATIN CAPITAL LETTER I WITH CIRCUMFLEX
+0x00CF		I	# LATIN CAPITAL LETTER I WITH DIAERESIS
 
-0xA0		" "	# NO-BREAK SPACE
-0xA1		!	# INVERTED EXCLAMATION MARK
-0xA2		_cent_	# CENT SIGN
-0xA3		_pound_	# POUND SIGN
-0xA4		$	# CURRENCY SIGN
-0xA5		_yen_	# YEN SIGN
-0xA7		_ss_	# SECTION SIGN
-0xA9		_copy_	# COPYRIGHT SIGN
-0xAA		_a_	# FEMININE ORDINAL INDICATOR
-0xAB		'"'	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
-0xAD		-	# SOFT HYPHEN
-0xAE		_reg_	# REGISTERED SIGN
+0x00D0		TH	# LATIN CAPITAL LETTER ETH (Icelandic)
+0x00D1		N	# LATIN CAPITAL LETTER N WITH TILDE
+0x00D2		O	# LATIN CAPITAL LETTER O WITH GRAVE
+0x00D3		O	# LATIN CAPITAL LETTER O WITH ACUTE
+0x00D4		O	# LATIN CAPITAL LETTER O WITH CIRCUMFLEX
+0x00D5		O	# LATIN CAPITAL LETTER O WITH TILDE
+0x00D6		O	# LATIN CAPITAL LETTER O WITH DIAERESIS
+0x00D7		x	# MULTIPLICATION SIGN
+0x00D8		O	# LATIN CAPITAL LETTER O WITH STROKE
+0x00D9		U	# LATIN CAPITAL LETTER U WITH GRAVE
+0x00DA		U	# LATIN CAPITAL LETTER U WITH ACUTE
+0x00DB		U	# LATIN CAPITAL LETTER U WITH CIRCUMFLEX
+0x00DC		U	# LATIN CAPITAL LETTER U WITH DIAERESIS
+0x00DD		Y	# LATIN CAPITAL LETTER Y WITH ACUTE
+0x00DE		TH	# LATIN CAPITAL LETTER THORN (Icelandic)
+0x00DF		ss	# LATIN SMALL LETTER SHARP S (German)
 
-0xB0		_deg_	# DEGREE SIGN
-0xB2		^2	# SUPERSCRIPT TWO
-0xB3		^3	# SUPERSCRIPT THREE
-0xB4		"'"	# ACUTE ACCENT
-0xB5		u	# MICRO SIGN
-0xB6		_pp_	# PILCROW SIGN
-0xB7		*	# MIDDLE DOT
-0xB8		,	# CEDILLA
-0xB9		^1	# SUPERSCRIPT ONE
-0xBA		_o_	# MASCULINE ORDINAL INDICATOR
-0xBB		'"'	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
-0xBF		?	# INVERTED QUESTION MARK
+0x00E0		a	# LATIN SMALL LETTER A WITH GRAVE
+0x00E1		a	# LATIN SMALL LETTER A WITH ACUTE
+0x00E2		a	# LATIN SMALL LETTER A WITH CIRCUMFLEX
+0x00E3		a	# LATIN SMALL LETTER A WITH TILDE
+0x00E4		a	# LATIN SMALL LETTER A WITH DIAERESIS
+0x00E5		a	# LATIN SMALL LETTER A WITH RING ABOVE
+0x00E6		ae	# LATIN SMALL LETTER AE
+0x00E7		c	# LATIN SMALL LETTER C WITH CEDILLA
+0x00E8		e	# LATIN SMALL LETTER E WITH GRAVE
+0x00E9		e	# LATIN SMALL LETTER E WITH ACUTE
+0x00EA		e	# LATIN SMALL LETTER E WITH CIRCUMFLEX
+0x00EB		e	# LATIN SMALL LETTER E WITH DIAERESIS
+0x00EC		i	# LATIN SMALL LETTER I WITH GRAVE
+0x00ED		i	# LATIN SMALL LETTER I WITH ACUTE
+0x00EE		i	# LATIN SMALL LETTER I WITH CIRCUMFLEX
+0x00EF		i	# LATIN SMALL LETTER I WITH DIAERESIS
 
-0xC0		A	# LATIN CAPITAL LETTER A WITH GRAVE
-0xC1		A	# LATIN CAPITAL LETTER A WITH ACUTE
-0xC2		A	# LATIN CAPITAL LETTER A WITH CIRCUMFLEX
-0xC3		A	# LATIN CAPITAL LETTER A WITH TILDE
-0xC4		A	# LATIN CAPITAL LETTER A WITH DIAERESIS
-0xC5		A	# LATIN CAPITAL LETTER A WITH RING ABOVE
-0xC6		AE	# LATIN CAPITAL LETTER AE
-0xC7		C	# LATIN CAPITAL LETTER C WITH CEDILLA
-0xC8		E	# LATIN CAPITAL LETTER E WITH GRAVE
-0xC9		E	# LATIN CAPITAL LETTER E WITH ACUTE
-0xCA		E	# LATIN CAPITAL LETTER E WITH CIRCUMFLEX
-0xCB		E	# LATIN CAPITAL LETTER E WITH DIAERESIS
-0xCC		I	# LATIN CAPITAL LETTER I WITH GRAVE
-0xCD		I	# LATIN CAPITAL LETTER I WITH ACUTE
-0xCE		I	# LATIN CAPITAL LETTER I WITH CIRCUMFLEX
-0xCF		I	# LATIN CAPITAL LETTER I WITH DIAERESIS
-
-0xD0		TH	# LATIN CAPITAL LETTER ETH (Icelandic)
-0xD1		N	# LATIN CAPITAL LETTER N WITH TILDE
-0xD2		O	# LATIN CAPITAL LETTER O WITH GRAVE
-0xD3		O	# LATIN CAPITAL LETTER O WITH ACUTE
-0xD4		O	# LATIN CAPITAL LETTER O WITH CIRCUMFLEX
-0xD5		O	# LATIN CAPITAL LETTER O WITH TILDE
-0xD6		O	# LATIN CAPITAL LETTER O WITH DIAERESIS
-0xD7		x	# MULTIPLICATION SIGN
-0xD8		O	# LATIN CAPITAL LETTER O WITH STROKE
-0xD9		U	# LATIN CAPITAL LETTER U WITH GRAVE
-0xDA		U	# LATIN CAPITAL LETTER U WITH ACUTE
-0xDB		U	# LATIN CAPITAL LETTER U WITH CIRCUMFLEX
-0xDC		U	# LATIN CAPITAL LETTER U WITH DIAERESIS
-0xDD		Y	# LATIN CAPITAL LETTER Y WITH ACUTE
-0xDE		TH	# LATIN CAPITAL LETTER THORN (Icelandic)
-0xDF		ss	# LATIN SMALL LETTER SHARP S (German)
-
-0xE0		a	# LATIN SMALL LETTER A WITH GRAVE
-0xE1		a	# LATIN SMALL LETTER A WITH ACUTE
-0xE2		a	# LATIN SMALL LETTER A WITH CIRCUMFLEX
-0xE3		a	# LATIN SMALL LETTER A WITH TILDE
-0xE4		a	# LATIN SMALL LETTER A WITH DIAERESIS
-0xE5		a	# LATIN SMALL LETTER A WITH RING ABOVE
-0xE6		ae	# LATIN SMALL LETTER AE
-0xE7		c	# LATIN SMALL LETTER C WITH CEDILLA
-0xE8		e	# LATIN SMALL LETTER E WITH GRAVE
-0xE9		e	# LATIN SMALL LETTER E WITH ACUTE
-0xEA		e	# LATIN SMALL LETTER E WITH CIRCUMFLEX
-0xEB		e	# LATIN SMALL LETTER E WITH DIAERESIS
-0xEC		i	# LATIN SMALL LETTER I WITH GRAVE
-0xED		i	# LATIN SMALL LETTER I WITH ACUTE
-0xEE		i	# LATIN SMALL LETTER I WITH CIRCUMFLEX
-0xEF		i	# LATIN SMALL LETTER I WITH DIAERESIS
-
-0xF0		th	# LATIN SMALL LETTER ETH (Icelandic)
-0xF1		n	# LATIN SMALL LETTER N WITH TILDE
-0xF2		o	# LATIN SMALL LETTER O WITH GRAVE
-0xF3		o	# LATIN SMALL LETTER O WITH ACUTE
-0xF4		o	# LATIN SMALL LETTER O WITH CIRCUMFLEX
-0xF5		o	# LATIN SMALL LETTER O WITH TILDE
-0xF6		o	# LATIN SMALL LETTER O WITH DIAERESIS
-0xF8		o	# LATIN SMALL LETTER O WITH STROKE
-0xF9		u	# LATIN SMALL LETTER U WITH GRAVE
-0xFA		u	# LATIN SMALL LETTER U WITH ACUTE
-0xFB		u	# LATIN SMALL LETTER U WITH CIRCUMFLEX
-0xFC		u	# LATIN SMALL LETTER U WITH DIAERESIS
-0xFD		y	# LATIN SMALL LETTER Y WITH ACUTE
-0xFE		th	# LATIN SMALL LETTER THORN (Icelandic)
-0xFF		y	# LATIN SMALL LETTER Y WITH DIAERESIS
+0x00F0		th	# LATIN SMALL LETTER ETH (Icelandic)
+0x00F1		n	# LATIN SMALL LETTER N WITH TILDE
+0x00F2		o	# LATIN SMALL LETTER O WITH GRAVE
+0x00F3		o	# LATIN SMALL LETTER O WITH ACUTE
+0x00F4		o	# LATIN SMALL LETTER O WITH CIRCUMFLEX
+0x00F5		o	# LATIN SMALL LETTER O WITH TILDE
+0x00F6		o	# LATIN SMALL LETTER O WITH DIAERESIS
+0x00F8		o	# LATIN SMALL LETTER O WITH STROKE
+0x00F9		u	# LATIN SMALL LETTER U WITH GRAVE
+0x00FA		u	# LATIN SMALL LETTER U WITH ACUTE
+0x00FB		u	# LATIN SMALL LETTER U WITH CIRCUMFLEX
+0x00FC		u	# LATIN SMALL LETTER U WITH DIAERESIS
+0x00FD		y	# LATIN SMALL LETTER Y WITH ACUTE
+0x00FE		th	# LATIN SMALL LETTER THORN (Icelandic)
+0x00FF		y	# LATIN SMALL LETTER Y WITH DIAERESIS
 
 end
 
@@ -139,12 +126,12 @@ end
 
 start		de
 
-0xC4		AE	# LATIN CAPITAL LETTER A WITH UMLAUT
-0xD6		OE	# LATIN CAPITAL LETTER O WITH UMLAUT
-0xDC		UE	# LATIN CAPITAL LETTER U WITH UMLAUT
+0x00C4		AE	# LATIN CAPITAL LETTER A WITH UMLAUT
+0x00D6		OE	# LATIN CAPITAL LETTER O WITH UMLAUT
+0x00DC		UE	# LATIN CAPITAL LETTER U WITH UMLAUT
 
-0xE4		ae	# LATIN SMALL LETTER A WITH UMLAUT
-0xF6		oe	# LATIN SMALL LETTER O WITH UMLAUT
-0xFC		ue	# LATIN SMALL LETTER U WITH UMLAUT 
+0x00E4		ae	# LATIN SMALL LETTER A WITH UMLAUT
+0x00F6		oe	# LATIN SMALL LETTER O WITH UMLAUT
+0x00FC		ue	# LATIN SMALL LETTER U WITH UMLAUT 
 
 end
