--- a/table/unicode.tbl.sample
+++ b/table/unicode.tbl.sample
@@ -10,6 +10,7 @@
 # - https://www.unicode.org/Public/5.2.0/ucd/UnicodeData.txt
 # - https://metacpan.org/pod/Text::Unidecode
 # - https://github.com/Behat/Transliterator
+# - https://www.unicode.org/charts/
 #
 # Used for translating Icelandic:
 # - http://www.bartleby.com/65/th/Thingval.html
@@ -18,6 +19,7 @@
 #
 # Greenlandic:
 # - http://std.dkuug.dk/cultreg/registrations/narrative/da_DK,_4.3.html
+# - https://en.wikipedia.org/wiki/Kra_(letter)
 #
 # Sami:
 # - http://www.wordiq.com/definition/Sami_languages
@@ -31,8 +33,9 @@ default		_
 start
 
 #
-# Basic Latin - This is a subset of the basic 7-bit ASCII table, with unsafe
-# characters removed.
+# C0 Controls and Basic Latin - 0x0000–0x007F
+#
+# https://www.unicode.org/charts/PDF/U0000.pdf
 #
 
 0x0020		" "	# SPACE
@@ -137,23 +140,8 @@ start
 0x007E		~	# TILDE
 
 #
-# CP 1252
+# Latin 1 Supplemental - 0x0080-0x00FF
 #
-
-0x0085		...	# HORIZONTAL ELLIPSIS
-0x0088		^	# MODIFIER LETTER CIRCUMFLEX ACCENT
-0x008A		S	# LATIN CAPITAL LETTER S WITH CARON
-0x008C		OE	# LATIN CAPITAL LIGATURE OE
-
-0x0096		-	# EN DASH
-0x0097		-	# EM DASH
-0x0099		_tm_	# TRADE MARK SIGN
-0x009A		s	# LATIN SMALL LETTER S WITH CARON
-0x009C		oe	# LATIN SMALL LIGATURE OE
-0x009F		Y	# LATIN CAPITAL LETTER Y WITH DIAERESIS
-
-#
-# Latin 1 Supplemental
 # https://unicode.org/charts/PDF/U0080.pdf
 #
 
@@ -164,6 +152,7 @@ start
 0x00A4		$	# CURRENCY SIGN
 0x00A5		_yen_	# YEN SIGN
 0x00A7		_ss_	# SECTION SIGN
+0x00A8		" "	# DIAERESIS
 0x00A9		_copy_	# COPYRIGHT SIGN
 0x00AA		_a_	# FEMININE ORDINAL INDICATOR
 0x00AB		'"'	# LEFT-POINTING DOUBLE ANGLE QUOTATION MARK
@@ -177,7 +166,7 @@ start
 0x00B5		u	# MICRO SIGN
 0x00B6		_pp_	# PILCROW SIGN
 0x00B7		*	# MIDDLE DOT
-0x00B8		,	# CEDILLA
+0x00B8		" "	# CEDILLA
 0x00B9		^1	# SUPERSCRIPT ONE
 0x00BA		_o_	# MASCULINE ORDINAL INDICATOR
 0x00BB		'"'	# RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK
@@ -251,7 +240,9 @@ start
 0x00FF		y	# LATIN SMALL LETTER Y WITH DIAERESIS
 
 #
-# Latin Extended A
+# Latin Extended A - 0x0100-0x17F
+#
+# https://www.unicode.org/charts/PDF/U0100.pdf
 #
 
 0x0100		A	# LATIN CAPITAL LETTER A WITH MACRON
@@ -331,7 +322,7 @@ start
 0x0146		n	# LATIN SMALL LETTER N WITH CEDILLA
 0x0147		N	# LATIN CAPITAL LETTER N WITH CARON
 0x0148		n	# LATIN SMALL LETTER N WITH CARON
-0x0149		n	# LATIN SMALL LETTER N PRECEDED BY APOSTROPHE
+0x0149		"'n"	# LATIN SMALL LETTER N PRECEDED BY APOSTROPHE
 0x014A		NG	# LATIN CAPITAL LETTER ENG (Sami)
 0x014B		ng	# LATIN SMALL LETTER ENG (Sami)
 0x014C		O	# LATIN CAPITAL LETTER O WITH MACRON
@@ -391,10 +382,256 @@ start
 0x017F		s	# LATIN SMALL LETTER LONG S
 
 #
-# Dunno where
+# Latin Extended B - 0x0180-0x024F
+#
+# https://www.unicode.org/charts/PDF/U0180.pdf
+#
+
+0x0180		b	# LATIN SMALL LETTER B WITH STROKE
+0x0181		B	# LATIN CAPITAL LETTER B WITH HOOK
+0x0182		B	# LATIN CAPITAL LETTER B WITH TOPBAR
+0x0183		b	# LATIN SMALL LETTER B WITH TOPBAR
+0x0184		B	# LATIN CAPITAL LETTER TONE SIX
+0x0185		b	# LATIN SMALL LETTER TONE SIX
+0x0186		O	# LATIN CAPITAL LETTER OPEN O
+0x0187		C	# LATIN CAPITAL LETTER C WITH HOOK
+0x0188		c	# LATIN SMALL LETTER C WITH HOOK
+0x0189		D	# LATIN CAPITAL LETTER AFRICAN D
+0x018A		D	# LATIN CAPITAL LETTER D WITH HOOK
+0x018B		D	# LATIN CAPITAL LETTER D WITH TOPBAR
+0x018C		d	# LATIN SMALL LETTER D WITH TOPBAR
+0x018D		z	# LATIN SMALL LETTER TURNED DELTA
+0x018E		E	# LATIN CAPITAL LETTER REVERSED E
+0x018F		E	# LATIN CAPITAL LETTER SCHWA
+
+0x0190		E	# LATIN CAPITAL LETTER OPEN E
+0x0191		F	# LATIN CAPITAL LETTER F WITH HOOK
+0x0192		f	# LATIN SMALL LETTER F WITH HOOK
+0x0193		G	# LATIN CAPITAL LETTER G WITH HOOK
+0x0194		Y	# LATIN CAPITAL LETTER GAMMA
+0x0195		hv	# LATIN SMALL LETTER HV
+0x0196		I	# LATIN CAPITAL LETTER IOTA
+0x0197		I	# LATIN CAPITAL LETTER I WITH STROKE
+0x0198		K	# LATIN CAPITAL LETTER K WITH HOOK
+0x0199		k	# LATIN SMALL LETTER K WITH HOOK
+0x019A		l	# LATIN SMALL LETTER L WITH BAR
+0x019B		l	# LATIN SMALL LETTER LAMBDA WITH STROKE
+0x019C		w	# LATIN CAPITAL LETTER TURNED M
+0x019D		N	# LATIN CAPITAL LETTER N WITH LEFT HOOK
+0x019E		n	# LATIN SMALL LETTER N WITH LONG RIGHT LEG
+0x019F		O	# LATIN CAPITAL LETTER O WITH MIDDLE TILDE
+
+0x01A0		O	# LATIN CAPITAL LETTER O WITH HORN
+0x01A1		o	# LATIN SMALL LETTER O WITH HORN
+0x01A2		OI	# LATIN CAPITAL LETTER OI
+0x01A3		oi	# LATIN SMALL LETTER OI
+0x01A4		P	# LATIN CAPITAL LETTER P WITH HOOK
+0x01A5		p	# LATIN SMALL LETTER P WITH HOOK
+0x01A6		YR	# LATIN LETTER YR
+0x01A7		S	# LATIN CAPITAL LETTER TONE TWO
+0x01A8		s	# LATIN SMALL LETTER TONE TWO
+0x01A9		SH	# LATIN CAPITAL LETTER ESH
+0x01AA		sh	# LATIN LETTER REVERSED ESH LOOP
+0x01AB		t	# LATIN SMALL LETTER T WITH PALATAL HOOK
+0x01AC		T	# LATIN CAPITAL LETTER T WITH HOOK
+0x01AD		t	# LATIN SMALL LETTER T WITH HOOK
+0x01AE		T	# LATIN CAPITAL LETTER T WITH RETROFLEX HOOK
+0x01AF		U	# LATIN CAPITAL LETTER U WITH HORN
+
+0x01B0		u	# LATIN SMALL LETTER U WITH HORN
+0x01B1		Y	# LATIN CAPITAL LETTER UPSILON
+0x01B2		V	# LATIN CAPITAL LETTER V WITH HOOK
+0x01B3		Y	# LATIN CAPITAL LETTER Y WITH HOOK
+0x01B4		y	# LATIN SMALL LETTER Y WITH HOOK
+0x01B5		Z	# LATIN CAPITAL LETTER Z WITH STROKE
+0x01B6		z	# LATIN SMALL LETTER Z WITH STROKE
+0x01B7		ZH	# LATIN CAPITAL LETTER EZH
+0x01B8		ZH	# LATIN CAPITAL LETTER EZH REVERSED
+0x01B9		zh	# LATIN SMALL LETTER EZH REVERSED
+0x01BA		zh	# LATIN SMALL LETTER EZH WITH TAIL
+0x01BB		dz	# LATIN LETTER TWO WITH STROKE
+0x01BC		5	# LATIN CAPITAL LETTER TONE FIVE
+0x01BD		5	# LATIN SMALL LETTER TONE FIVE
+0x01BE		ts	# LATIN LETTER INVERTED GLOTTAL STOP WITH STROKE
+0x01BF		w	# LATIN LETTER WYNN
+
+0x01C4		DZ	# LATIN CAPITAL LETTER DZ WITH CARON
+0x01C5		Dz	# LATIN CAPITAL LETTER D WITH SMALL LETTER Z WITH CARON
+0x01C6		dz	# LATIN SMALL LETTER DZ WITH CARON
+0x01C7		LJ	# LATIN CAPITAL LETTER LJ
+0x01C8		Lj	# LATIN CAPITAL LETTER L WITH SMALL LETTER J
+0x01C9		lj	# LATIN SMALL LETTER LJ
+0x01CA		NJ	# LATIN CAPITAL LETTER NJ
+0x01CB		Nj	# LATIN CAPITAL LETTER N WITH SMALL LETTER J
+0x01CC		nj	# LATIN SMALL LETTER NJ
+0x01CD		A	# LATIN CAPITAL LETTER A WITH CARON
+0x01CE		a	# LATIN SMALL LETTER A WITH CARON
+0x01CF		I	# LATIN CAPITAL LETTER I WITH CARON
+
+0x01D0		i	# LATIN SMALL LETTER I WITH CARON
+0x01D1		O	# LATIN CAPITAL LETTER O WITH CARON
+0x01D2		o	# LATIN SMALL LETTER O WITH CARON
+0x01D3		U	# LATIN CAPITAL LETTER U WITH CARON
+0x01D4		u	# LATIN SMALL LETTER U WITH CARON
+0x01D5		U	# LATIN CAPITAL LETTER U WITH DIAERESIS AND MACRON
+0x01D6		u	# LATIN SMALL LETTER U WITH DIAERESIS AND MACRON
+0x01D7		U	# LATIN CAPITAL LETTER U WITH DIAERESIS AND ACUTE
+0x01D8		u	# LATIN SMALL LETTER U WITH DIAERESIS AND ACUTE
+0x01D9		U	# LATIN CAPITAL LETTER U WITH DIAERESIS AND CARON
+0x01DA		u	# LATIN SMALL LETTER U WITH DIAERESIS AND CARON
+0x01DB		U	# LATIN CAPITAL LETTER U WITH DIAERESIS AND GRAVE
+0x01DC		u	# LATIN SMALL LETTER U WITH DIAERESIS AND GRAVE
+0x01DD		e	# LATIN SMALL LETTER TURNED E
+0x01DE		A	# LATIN CAPITAL LETTER A WITH DIAERESIS AND MACRON
+0x01DF		a	# LATIN SMALL LETTER A WITH DIAERESIS AND MACRON
+
+0x01E0		A	# LATIN CAPITAL LETTER A WITH DOT ABOVE AND MACRON
+0x01E1		a	# LATIN SMALL LETTER A WITH DOT ABOVE AND MACRON
+0x01E2		AE	# LATIN CAPITAL LETTER AE WITH MACRON
+0x01E3		ae	# LATIN SMALL LETTER AE WITH MACRON
+0x01E4		G	# LATIN CAPITAL LETTER G WITH STROKE
+0x01E5		g	# LATIN SMALL LETTER G WITH STROKE
+0x01E6		G	# LATIN CAPITAL LETTER G WITH CARON
+0x01E7		g	# LATIN SMALL LETTER G WITH CARON
+0x01E8		K	# LATIN CAPITAL LETTER K WITH CARON
+0x01E9		k	# LATIN SMALL LETTER K WITH CARON
+0x01EA		O	# LATIN CAPITAL LETTER O WITH OGONEK
+0x01EB		o	# LATIN SMALL LETTER O WITH OGONEK
+0x01EC		O	# LATIN CAPITAL LETTER O WITH OGONEK AND MACRON
+0x01ED		o	# LATIN SMALL LETTER O WITH OGONEK AND MACRON
+0x01EE		ZH	# LATIN CAPITAL LETTER EZH WITH CARON
+0x01EF		zh	# LATIN SMALL LETTER EZH WITH CARON
+
+0x01F0		j	# LATIN SMALL LETTER J WITH CARON
+0x01F1		DZ	# LATIN CAPITAL LETTER DZ
+0x01F2		Dz	# LATIN CAPITAL LETTER D WITH SMALL LETTER Z
+0x01F3		dz	# LATIN SMALL LETTER DZ
+0x01F4		G	# LATIN CAPITAL LETTER G WITH ACUTE
+0x01F5		g	# LATIN SMALL LETTER G WITH ACUTE
+0x01F6		HU	# LATIN CAPITAL LETTER HWAIR
+0x01F7		W	# LATIN CAPITAL LETTER WYNN
+0x01F8		N	# LATIN CAPITAL LETTER N WITH GRAVE
+0x01F9		n	# LATIN SMALL LETTER N WITH GRAVE
+0x01FA		A	# LATIN CAPITAL LETTER A WITH RING ABOVE AND ACUTE
+0x01FB		a	# LATIN SMALL LETTER A WITH RING ABOVE AND ACUTE
+0x01FC		AE	# LATIN CAPITAL LETTER AE WITH ACUTE
+0x01FD		ae	# LATIN SMALL LETTER AE WITH ACUTE
+0x01FE		O	# LATIN CAPITAL LETTER O WITH STROKE AND ACUTE
+0x01FF		o	# LATIN SMALL LETTER O WITH STROKE AND ACUTE
+
+0x0200		A	# LATIN CAPITAL LETTER A WITH DOUBLE GRAVE
+0x0201		a	# LATIN SMALL LETTER A WITH DOUBLE GRAVE
+0x0202		A	# LATIN CAPITAL LETTER A WITH INVERTED BREVE
+0x0203		a	# LATIN SMALL LETTER A WITH INVERTED BREVE
+0x0204		E	# LATIN CAPITAL LETTER E WITH DOUBLE GRAVE
+0x0205		e	# LATIN SMALL LETTER E WITH DOUBLE GRAVE
+0x0206		E	# LATIN CAPITAL LETTER E WITH INVERTED BREVE
+0x0207		e	# LATIN SMALL LETTER E WITH INVERTED BREVE
+0x0208		I	# LATIN CAPITAL LETTER I WITH DOUBLE GRAVE
+0x0209		i	# LATIN SMALL LETTER I WITH DOUBLE GRAVE
+0x020A		I	# LATIN CAPITAL LETTER I WITH INVERTED BREVE
+0x020B		i	# LATIN SMALL LETTER I WITH INVERTED BREVE
+0x020C		O	# LATIN CAPITAL LETTER O WITH DOUBLE GRAVE
+0x020D		o	# LATIN SMALL LETTER O WITH DOUBLE GRAVE
+0x020E		O	# LATIN CAPITAL LETTER O WITH INVERTED BREVE
+0x020F		o	# LATIN SMALL LETTER O WITH INVERTED BREVE
+
+0x0210		R	# LATIN CAPITAL LETTER R WITH DOUBLE GRAVE
+0x0211		r	# LATIN SMALL LETTER R WITH DOUBLE GRAVE
+0x0212		R	# LATIN CAPITAL LETTER R WITH INVERTED BREVE
+0x0213		r	# LATIN SMALL LETTER R WITH INVERTED BREVE
+0x0214		U	# LATIN CAPITAL LETTER U WITH DOUBLE GRAVE
+0x0215		u	# LATIN SMALL LETTER U WITH DOUBLE GRAVE
+0x0216		U	# LATIN CAPITAL LETTER U WITH INVERTED BREVE
+0x0217		u	# LATIN SMALL LETTER U WITH INVERTED BREVE
+0x0218		S	# LATIN CAPITAL LETTER S WITH COMMA BELOW
+0x0219		s	# LATIN SMALL LETTER S WITH COMMA BELOW
+0x021A		T	# LATIN CAPITAL LETTER T WITH COMMA BELOW
+0x021B		t	# LATIN SMALL LETTER T WITH COMMA BELOW
+0x021C		Y	# LATIN CAPITAL LETTER YOGH
+0x021D		y	# LATIN SMALL LETTER YOGH
+0x021E		H	# LATIN CAPITAL LETTER H WITH CARON
+0x021F		h	# LATIN SMALL LETTER H WITH CARON
+
+0x0220		N	# LATIN CAPITAL LETTER N WITH LONG RIGHT LEG
+0x0221		d	# LATIN SMALL LETTER D WITH CURL
+0x0222		OU	# LATIN CAPITAL LETTER OU
+0x0223		ou	# LATIN SMALL LETTER OU
+0x0224		Z	# LATIN CAPITAL LETTER Z WITH HOOK
+0x0225		z	# LATIN SMALL LETTER Z WITH HOOK
+0x0226		A	# LATIN CAPITAL LETTER A WITH DOT ABOVE
+0x0227		a	# LATIN SMALL LETTER A WITH DOT ABOVE
+0x0228		E	# LATIN CAPITAL LETTER E WITH CEDILLA
+0x0229		e	# LATIN SMALL LETTER E WITH CEDILLA
+0x022A		O	# LATIN CAPITAL LETTER O WITH DIAERESIS AND MACRON
+0x022B		o	# LATIN SMALL LETTER O WITH DIAERESIS AND MACRON
+0x022C		O	# LATIN CAPITAL LETTER O WITH TILDE AND MACRON
+0x022D		o	# LATIN SMALL LETTER O WITH TILDE AND MACRON
+0x022E		O	# LATIN CAPITAL LETTER O WITH DOT ABOVE
+0x022F		o	# LATIN SMALL LETTER O WITH DOT ABOVE
+
+0x0230		O	# LATIN CAPITAL LETTER O WITH DOT ABOVE AND MACRON
+0x0231		o	# LATIN SMALL LETTER O WITH DOT ABOVE AND MACRON
+0x0232		Y	# LATIN CAPITAL LETTER Y WITH MACRON
+0x0233		y	# LATIN SMALL LETTER Y WITH MACRON
+0x0234		l	# LATIN SMALL LETTER L WITH CURL
+0x0235		n	# LATIN SMALL LETTER N WITH CURL
+0x0236		t	# LATIN SMALL LETTER T WITH CURL
+0x0237		j	# LATIN SMALL LETTER DOTLESS J
+0x0238		db	# LATIN SMALL LETTER DB DIGRAPH
+0x0239		qp	# LATIN SMALL LETTER QP DIGRAPH
+0x023A		A	# LATIN CAPITAL LETTER A WITH STROKE
+0x023B		C	# LATIN CAPITAL LETTER C WITH STROKE
+0x023C		c	# LATIN SMALL LETTER C WITH STROKE
+0x023D		L	# LATIN CAPITAL LETTER L WITH BAR
+0x023E		T	# LATIN CAPITAL LETTER T WITH DIAGONAL STROKE
+0x023F		s	# LATIN SMALL LETTER S WITH SWASH TAIL
+
+0x0240		z	# LATIN SMALL LETTER Z WITH SWASH TAIL
+0x0243		B	# LATIN CAPITAL LETTER B WITH STROKE
+0x0244		U	# LATIN CAPITAL LETTER U BAR
+0x0245		^	# LATIN CAPITAL LETTER TURNED V
+0x0246		E	# LATIN CAPITAL LETTER E WITH STROKE
+0x0247		e	# LATIN SMALL LETTER E WITH STROKE
+0x0248		J	# LATIN CAPITAL LETTER J WITH STROKE
+0x0249		j	# LATIN SMALL LETTER J WITH STROKE
+0x024A		q	# LATIN CAPITAL LETTER SMALL Q WITH HOOK TAIL
+0x024B		q	# LATIN SMALL LETTER Q WITH HOOK TAIL
+0x024C		R	# LATIN CAPITAL LETTER R WITH STROKE
+0x024D		r	# LATIN SMALL LETTER R WITH STROKE
+0x024E		Y	# LATIN CAPITAL LETTER Y WITH STROKE
+0x024F		y	# LATIN SMALL LETTER Y WITH STROKE
+
+#
+# ...
 #
 
 0x02C6		^	# MODIFIER LETTER CIRCUMFLEX ACCENT
+
+#
+# ...
+#
+
+0x1E9E		SS	# LATIN CAPITAL LETTER SHARP S
+
+#
+# General Punctuation - 0x2000-0x206F
+#
+# https://unicode.org/charts/PDF/U2000.pdf
+#
+
+0x2000		" "	# EN QUAD
+0x2001		" "	# EM QUAD
+0x2002		" "	# EN SPACE
+0x2003		" "	# EM SPACE
+0x2004		" "	# THREE-PER-EM SPACE
+0x2005		" "	# FOUR-PER-EM SPACE
+0x2006		" "	# SIX-PER-EM SPACE
+0x2007		" "	# FIGURE SPACE
+0x2008		" "	# PUNCTUATION SPACE
+0x2009		" "	# THIN SPACE
+0x200A		" "	# HAIR SPACE
+0x200B		" "	# ZERO WIDTH SPACE
 
 0x2010		-	# HYPHEN
 0x2011		-	# NON-BREAKING HYPHEN
@@ -402,13 +639,79 @@ start
 0x2013		-	# EN DASH
 0x2014		-	# EM DASH
 0x2015		-	# HORIZONTAL BAR
+0x2017		_	# DOUBLE LOW LINE
+0x2018		"'"	# LEFT SINGLE QUOTATION MARK
+0x2019		"'"	# RIGHT SINGLE QUOTATION MARK
+0x201A		"'"	# SINGLE LOW-9 QUOTATION MARK
+0x201B		"'"	# SINGLE HIGH-REVERSED-9 QUOTATION MARK
+0x201C		'"'	# LEFT DOUBLE QUOTATION MARK
+0x201D		'"'	# RIGHT DOUBLE QUOTATION MARK
+0x201E		'"'	# DOUBLE LOW-9 QUOTATION MARK
+0x201F		'"'	# DOUBLE HIGH-REVERSED-9 QUOTATION MARK
 
+0x2020		+	# DAGGER
+0x2021		++	# DOUBLE DAGGER
+0x2022		*	# BULLET
+0x2024		.	# ONE DOT LEADER
+0x2025		..	# TWO DOT LEADER
 0x2026		...	# HORIZONTAL ELLIPSIS
+0x2027		.	# HYPHENATION POINT
+0x202F		" "	# NARROW NO-BREAK SPACE
+
+0x2030		%	# PER MILLE SIGN
+0x2031		%	# PER TEN THOUSAND SIGN
+0x2032		"'"	# PRIME
+0x2033		"''"	# DOUBLE PRIME
+0x2034		"'''"	# TRIPLE PRIME
+0x2035		`	# REVERSED PRIME
+0x2036		``	# REVERSED DOUBLE PRIME
+0x2037		```	# REVERSED TRIPLE PRIME
+0x2038		^	# CARET
+0x203B		*	# REFERENCE MARK
+0x203C		!!	# DOUBLE EXCLAMATION MARK
+0x203D		?	# INTERROBANG
+0x203E		-	# OVERLINE
+0x203F		_	# UNDERTIE
+
+0x2040		-	# CHARACTER TIE
+0x2041		^	# CARET INSERTION POINT
+0x2042		***	# ASTERISM
+0x2043		-	# HYPHEN BULLET
+0x2045		-[	# LEFT SQUARE BRACKET WITH QUILL
+0x2046		]-	# RIGHT SQUARE BRACKET WITH QUILL
+0x2047		??	# DOUBLE QUESTION MARK
+0x2048		?!	# QUESTION EXCLAMATION MARK
+0x2049		!?	# EXCLAMATION QUESTION MARK
+0x204A		&	# TIRONIAN SIGN ET
+0x204B		_pp_	# REVERSED PILCROW SIGN
+0x204E		*	# LOW ASTERISK
+0x204F		[)	# REVERSED SEMICOLON
+
+0x2051		**	# TWO ASTERISKS ALIGNED VERTICALLY
+0x2052		%	# COMMERCIAL MINUS SIGN
+0x2053		~	# SWING DASH
+0x2054		_	# INVERTED UNDERTIE
+0x2055		*	# FLOWER PUNCTUATION MARK
+0x2056		...	# THREE DOT PUNCTUATION
+0x2057		"''''"	# QUADRUPLE PRIME
+0x2058		....	# FOUR DOT PUNCTUATION
+0x2059		.....	# FIVE DOT PUNCTUATION
+0x205A		..	# TWO DOT PUNCTUATION
+0x205B		....	# FOUR DOT MARK
+0x205D		:	# TRICOLON
+0x205E		:	# VERTICAL FOUR DOTS
+0x205F		" "	# MEDIUM MATHEMATICAL SPACE
+
+0x2060		" "	# WORD JOINER
+
+#
+# ...
+#
 
 0x2122		_tm_	# TRADE MARK SIGN
 
 #
-# Mostly for testing
+# ...
 #
 
 0x10348		hu	# HWAIR
